# CatEditor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  _config.yml  about.md  index.md  run.sh
.github/workflows/: release.yml
DOCS/: LSP_OVERLAY_CUSTOMIZATION.md
_site/: README.md  about.html  code-of-conduct.html  index.html  index.md
_site/assets/js/: search-data.json
src/: app.rs  build.js  command_palette.rs  file_tree.rs  fuzzy_finder.rs  icons.rs  main.rs  message.rs  resources.rs  search.rs  settings.rs  syntax.rs  terminal.rs  theme.rs  vim_mode.rs  vim_motions.rs
src/_site/: index.html
src/app/: commands.rs  lifecycle.rs  subscription.rs  update.rs  view_editor.rs  view_finders.rs  view_integrations.rs  view_overlays.rs  view_root.rs  view_settings.rs  vim.rs
src/autocomplete/: context.rs  engine.rs  language.rs  mod.rs  scoring.rs  types.rs
src/config/: file_ops.rs  mod.rs  preferences.rs  theme_manager.rs
src/docs/: docs.md
src/features/: editor_buffer.rs  icons.rs  lsp.rs
src/hotkey/: command_input.rs  find_replace.rs  mod.rs  vim_motions.rs
src/pages/: about.html  index.html  install.html  install.sh
src/public/assets/css/: style.css
src/setup/: app.rs  menu.rs  mod.rs  theme.rs
src/src/: app.rs  main.rs  menu.rs
src/subscriptions/: keyboard.rs
src/templates/: base.html
src/ui/: editor.rs  mod.rs  sidebar.rs  styles.rs
src/wakatime/: client.rs  config.rs  mod.rs
tests/: lsp_tests.rs
utils/: build.sh
